--- a/tools_proj/XCPP/GameCore/GameCore.vcxproj
+++ b/tools_proj/XCPP/GameCore/GameCore.vcxproj
@@ -39,14 +39,18 @@
     <ClCompile Include="SceneList.cpp" />
     <ClCompile Include="GameTime.cpp" />
     <ClCompile Include="Timer.cpp" />
-    <ClCompile Include="TimerMgr.cpp" />
+    <ClCompile Include="XTimerMgr.cpp" />
     <ClCompile Include="XAIComponent.cpp" />
     <ClCompile Include="XAudioComponent.cpp" />
     <ClCompile Include="XBeHitComponent.cpp" />
+    <ClCompile Include="XComponent.cpp" />
     <ClCompile Include="XEntity.cpp" />
     <ClCompile Include="XEntityMgr.cpp" />
     <ClCompile Include="XEntityPresentation.cpp" />
     <ClCompile Include="XEntityStatistics.cpp" />
+    <ClCompile Include="XEventArgs.cpp" />
+    <ClCompile Include="XEventDef.cpp" />
+    <ClCompile Include="XEventMgr.cpp" />
     <ClCompile Include="XNavigationComponent.cpp" />
     <ClCompile Include="XNpcList.cpp" />
     <ClCompile Include="Vector3.cpp" />
@@ -80,14 +84,19 @@
     <ClInclude Include="GameTime.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="Timer.h" />
-    <ClInclude Include="TimerMgr.h" />
+    <ClInclude Include="ITimerCallback.h" />
+    <ClInclude Include="XTimerMgr.h" />
     <ClInclude Include="XAIComponent.h" />
     <ClInclude Include="XAudioComponent.h" />
     <ClInclude Include="XBeHitComponent.h" />
+    <ClInclude Include="XComponent.h" />
     <ClInclude Include="XEntity.h" />
     <ClInclude Include="XEntityMgr.h" />
     <ClInclude Include="XEntityPresentation.h" />
     <ClInclude Include="XEntityStatistics.h" />
+    <ClInclude Include="XEventArgs.h" />
+    <ClInclude Include="XEventDef.h" />
+    <ClInclude Include="XEventMgr.h" />
     <ClInclude Include="XMath.h" />
     <ClInclude Include="XNavigationComponent.h" />
     <ClInclude Include="XNpcList.h" />
