--- a/tools_proj/XCPP/GameCore/GameCore.vcxproj
+++ b/tools_proj/XCPP/GameCore/GameCore.vcxproj
@@ -41,6 +41,7 @@
     <ClCompile Include="GameTime.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Transform.cpp" />
+    <ClCompile Include="XAttributes.cpp" />
     <ClCompile Include="XTimerMgr.cpp" />
     <ClCompile Include="XAIComponent.cpp" />
     <ClCompile Include="XAudioComponent.cpp" />
@@ -87,6 +88,8 @@
     <ClInclude Include="Timer.h" />
     <ClInclude Include="ITimerCallback.h" />
     <ClInclude Include="Transform.h" />
+    <ClInclude Include="XAttributeDefine.h" />
+    <ClInclude Include="XAttributes.h" />
     <ClInclude Include="XStateDefine.h" />
     <ClInclude Include="XTimerMgr.h" />
     <ClInclude Include="XAIComponent.h" />
