--- a/tools_proj/XCPP/GameCore/GameCore.vcxproj.filters
+++ b/tools_proj/XCPP/GameCore/GameCore.vcxproj.filters
@@ -270,6 +270,12 @@
     <ClInclude Include="XAttributeDefine.h">
       <Filter>common\def</Filter>
     </ClInclude>
+    <ClInclude Include="AITreeArg.h">
+      <Filter>common\def</Filter>
+    </ClInclude>
+    <ClInclude Include="tinyxml2.h">
+      <Filter>common</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ai">
