--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@
 /tools_proj/XLib/XLib/bin/
 /tools_proj/XLib/XLib/obj/
 /tools_proj/XCPP/XCPP.VC.VC.opendb
-
+/tools_proj/Android/libs/
 **/[Ll]ibrary/
 **/[Tt]emp/
 **/[Oo]bj/
