--- a/tools_proj/XCPP/GameCore/GameCore.vcxproj
+++ b/tools_proj/XCPP/GameCore/GameCore.vcxproj
@@ -43,10 +43,14 @@
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="tinyxml2.cpp" />
     <ClCompile Include="Transform.cpp" />
+    <ClCompile Include="XArtsSkill.cpp" />
     <ClCompile Include="XAttributes.cpp" />
+    <ClCompile Include="XBullet.cpp" />
+    <ClCompile Include="XSkill.cpp" />
+    <ClCompile Include="XSkillCore.cpp" />
+    <ClCompile Include="XSkillMgr.cpp" />
     <ClCompile Include="XTimerMgr.cpp" />
     <ClCompile Include="XAIComponent.cpp" />
-    <ClCompile Include="XAudioComponent.cpp" />
     <ClCompile Include="XBeHitComponent.cpp" />
     <ClCompile Include="XComponent.cpp" />
     <ClCompile Include="XEntity.cpp" />
@@ -90,17 +94,20 @@
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="SkillReader.h" />
     <ClInclude Include="Timer.h" />
-    <ClInclude Include="ITimerCallback.h" />
     <ClInclude Include="tinyxml2.h" />
     <ClInclude Include="Transform.h" />
+    <ClInclude Include="XArtsSkill.h" />
     <ClInclude Include="XAttributeDefine.h" />
     <ClInclude Include="XAttributes.h" />
+    <ClInclude Include="XBullet.h" />
     <ClInclude Include="XComponentDef.h" />
     <ClInclude Include="XDelegate.h" />
+    <ClInclude Include="XSkill.h" />
+    <ClInclude Include="XSkillCore.h" />
+    <ClInclude Include="XSkillMgr.h" />
     <ClInclude Include="XStateDefine.h" />
     <ClInclude Include="XTimerMgr.h" />
     <ClInclude Include="XAIComponent.h" />
-    <ClInclude Include="XAudioComponent.h" />
     <ClInclude Include="XBeHitComponent.h" />
     <ClInclude Include="XEntity.h" />
     <ClInclude Include="XEntityMgr.h" />
