--- a/tools_proj/XCPP/GameCore/GameCore.vcxproj
+++ b/tools_proj/XCPP/GameCore/GameCore.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="AIBehaviour.cpp" />
     <ClCompile Include="AIFactory.cpp" />
     <ClCompile Include="AIRuntimeRotateSelf.cpp" />
+    <ClCompile Include="AIRuntimeRotateToTarget.cpp" />
     <ClCompile Include="AITree.cpp" />
     <ClCompile Include="AITreeData.cpp" />
     <ClCompile Include="AIUtil.cpp" />
@@ -74,6 +75,7 @@
     <ClInclude Include="AIBehaviour.h" />
     <ClInclude Include="AIFactory.h" />
     <ClInclude Include="AIRuntimeRotateSelf.h" />
+    <ClInclude Include="AIRuntimeRotateToTarget.h" />
     <ClInclude Include="AITree.h" />
     <ClInclude Include="AITreeArg.h" />
     <ClInclude Include="AITreeData.h" />
